# duck

./: .gitmodules  CMakeLists.txt  README.md
include/: duck.hpp
include/duck/: assignable.hpp  bidirectional_iterator.hpp  comparable.hpp  concept_overload.hpp  copy_constructible.hpp  default_constructible.hpp  destructible.hpp  equality_comparable.hpp  forward_iterator.hpp  incrementable_iterator.hpp  less_than_comparable.hpp  lvalue_iterator.hpp  models.hpp  null_archetype.hpp  random_access_iterator.hpp  readable_iterator.hpp  requires.hpp  single_pass_iterator.hpp  swappable_iterator.hpp  writeable_iterator.hpp
include/duck/detail/: config.hpp  iterator_concepts_ordering.hpp  mpl_extensions.hpp  test_expression.hpp
include/duck/sandbox/: concept_overload.hpp
test/: assignable.cpp  bidirectional_iterator.cpp  comparable.cpp  concept_overload.cpp  copy_constructible.cpp  default_constructible.cpp  destructible.cpp  equality_comparable.cpp  forward_iterator.cpp  incrementable_iterator.cpp  iterator_concepts_ordering.cpp  less_than_comparable.cpp  lvalue_iterator.cpp  main.cpp  null_archetype.cpp  random_access_iterator.cpp  readable_iterator.cpp  requires.cpp  single_pass_iterator.cpp  swappable_iterator.cpp  unit_test_helper.hpp  writeable_iterator.cpp
